# pystocktopus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.py  mkdocs.yml  noxfile.py  prediction_model.py  pyproject.toml  requriements.txt  setup.py  stock_data.csv  stock_initialize.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
Examples/: example_news_analysis.py  example_stock_csv.py  stock_data-2.csv  stock_data.csv
PyStoAnalyzer/: config.py  core.py  new_analysis.py  news_analysis.py  pattern_tool.py  stock_csv.py  stock_forecasting.py
PyStoAnalyzer/Data/Pattern/: ascending_triangle.json
PyStoAnalyzer/src/PyStoAnalyzer/: __init__.py  _version.py
PyStoAnalyzer/src/stockify/: __init__.py  _version.py
Stockify/: stock_csv.py
StockyProphet/: stock_forecasting.py
docs/: Install.md  conf.py  config.md  core.md  guide.md  index.md  news_analysis.md  pattern_tool.md  requirements.txt  stock_csv.md  stock_forecasting.md
pystocktopus/: GUI.py  __init__.py  __main__.py  _version.py  config.py  core.py  main.py  news_analysis.py  pattern_tool.py  stock_csv.py  stock_data.csv  stock_forecasting.py
pystocktopus/Data/Pattern/: ascending_triangle.json
pystocktopus/src/: __init__.py  _version.py
pystocktopus/src/pystocktopus/: __init__.py  _version.py
stock-env/share/jupyter/labextensions/jupyterlab-plotly/static/: 133.e85857c23bc96dec5e13.js  423.d0d3e2912c33c7566484.js  486.6450efe6168c2f8caddb.js  657.9df59cd7b5b5e72027cf.js  855.323c80e7298812d692e7.js  remoteEntry.56bf4b5dc66a26bcd462.js  third-party-licenses.json
stock-env/share/jupyter/nbextensions/jupyterlab-plotly/: extension.js
stockefy/: stock_csv.py
stockify/: config.py  core.py  new_analysis.py  pattern_tool.py  stock_csv.py
stockify/src/stockify/: __init__.py
tests/: TestCSV.csv  Test_result  core_test.py  example_core.py  example_forecasting.py  example_news_analysis.py  forecasting_test.py  news_analysis_test.py  square.py  stock_csv_test.py  stock_data-2.csv  stock_data.csv  test1.py  test_core.py  test_forecasting.py  test_news_analysis.py  test_package.py  test_square.py  test_stock_csv.py  tests_stock_csv.py
tests123/: test_core.py  test_forecasting.py  test_stock_csv.py
